...
                                    </constraint>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="SPD-bA-tpR">
                                <rect key="frame" x="20" y="483" width="374" height="120"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email id" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Hxs-kj-WpQ">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="XK7-JS-Da7">
                                                <variation key="heightClass=regular-widthClass=regular" constant="65"/>
                                            </constraint>
                                        </constraints>
...
                                        </variation>
                                        <connections>
                                            <action selector="loginEmailTextfieldFocus:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="TDJ-l1-d6V"/>
                                            <action selector="loginEmailTextfieldHideFocus:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="ozI-8m-5do"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yPz-54-ucK">
                                        <rect key="frame" x="0.0" y="75" width="374" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="e18-JF-aAn">
                                                <variation key="heightClass=regular-widthClass=regular" constant="65"/>
                                            </constraint>
                                        </constraints>
...
